# 0mni

./: .gitignore  AGENTS.md  BUILD_PLAN.md  MASTERPLAN.md  PLATFORM_SCHEMA.md  README.md  package.json  spacetime.local.json
agents/: .env.example  README.md  pyproject.toml
agents/src/: __init__.py  base_agent.py  code_review_agent.py  config.py  docs_agent.py  main.py  recruiter_agent.py  sales_agent.py  spacetimedb_client.py  supervisor.py  support_agent.py  verification.py
apps/web/: .env.example  .gitignore  next.config.ts  package.json  playwright.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/callback/: page.tsx
apps/web/app/collaboration/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: app-sidebar.tsx  block-editor.tsx  command-palette.tsx  excalidraw-editor.tsx  keyboard-shortcuts-dialog.tsx  live-globe.tsx  mention-input.tsx  messages-shortcut-bar.tsx  mobile-tab-bar.tsx  nav-user.tsx  notification-bell.tsx  notification-center.tsx  notification-prompt.tsx  org-context.tsx  org-gate.tsx  page-presence.tsx  presence-avatars.tsx  presence-bar.tsx  protected-route.tsx  share-invite-dialog.tsx  theme-toggle.tsx
apps/web/hooks/: use-keyboard-shortcuts.ts  use-messages-keyboard.ts  use-notification-manager.ts  use-notifications.ts  use-page-presence.ts  use-resource-presence.ts
apps/web/lib/: format.ts
apps/web/providers/: auth.tsx  index.tsx  oidc-auth.tsx  spacetimedb.tsx
apps/web/public/: sw.js
spacetimedb/src/: lib.rs
(+68 files in other folders)
